# fastapi-template

./: Dockerfile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
app/: main.py
