[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = ""
authors = ["Kei198403 <74121135+Kei198403@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "~0.108.0"
pydantic = "~2.5.3"
uvicorn = "~0.25.0"
gunicorn = "~21.2.0"

[tool.poetry.group.dev.dependencies]
autopep8 = "~2.0.4"
mypy = "~1.8.0"
pylint = "~3.0.3"
flake8 = "~7.0.0"
ipykernel = "~6.28.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
